# zigrad

./: .bazelrc  .envrc  .gitignore  BUILD  CNAME  Dockerfile  Earthfile  MODULE.bazel  README.md  build.zig  build.zig.zon  flake.nix  index.html  justfile  main.js  ops.md  plot_weights.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: format-check.yml  prune-cache.yml  system-tests.yml  update-docs.yml
compile-pipeline/: compile.sh  main.zig
docs/: 2025-03-22-device-proposal.md  README-DRAFT.md  README-TEMPLATE.md  architecture.norg  roadmap.norg  zigrad-demo.tape
examples/dqn/: .gitignore  Makefile  README.md  build.zig  build.zig.zon  cartpole_py.py  cartpole_wrapper.zig  torchdqn.py
examples/gcn/: README.md  build.zig  build.zig.zon  compare.py
examples/hello-world/: build.zig  build.zig.zon
examples/mnist/: BUILD  MODULE.bazel  Makefile  _bzl_run_helper.sh  build.zig  build.zig.zon  mnist_data.py  requirements.txt
examples/mnist/src/: dataset.zig  main-simple.zig  main-timing.zig  main.zig  model.zig
examples/mujoco-cartpole/: README.md  build.zig  build.zig.zon  cartpole.xml
examples/rnn/: build.zig  build.zig.zon
scripts/: backend.py  cuda_includes.cu  cuda_includes.py  cuda_setup.py  fndecls.lua  fndecls.py  mnist_compare.py  mnist_data.py  tb.py  tracy.py
src/: allocators.zig  backend.zig  backward_context.zig  cuda.zig  device.zig  gemm.zig  grad.zig  graph.zig  graph_manager.zig  host.zig  logging.zig  main.zig  ndarray.zig  ndtensor.zig  neuron.zig  nn.zig  root.zig  static.zig  tensor.zig  tracy.zig  zarray.zig  zigrad.zig
src/allocators/: arena_unmanaged.zig  block_allocator.zig  block_pool.zig  caching_allocator.zig  constants.zig  device_data.zig  order_list.zig  pool.zig  scalar_allocator.zig  scratch_allocator.zig
src/backend/: blas.zig
src/cuda/: CMakeLists.txt  amalgomate.cu  blas_conflux.cu  blas_conflux.h  cuda_helpers.cu  cuda_includes.cu  cuda_setup.py  cuda_utils.cu  cuda_utils.h  cutensor_utils.cu  decls.h  device_properties.cu  nn_conflux.cu  nn_conflux.h  root.zig
src/cuda/blas/: addition.cu  axpy.cu  blas_utils.cu  clip_nrm2.cu  cmp_reduce_bwds.cu  contraction.cu  division.cu  dot.cu  gemm.cu  gemv.cu  ger.cu  hadamard.cu  max.cu  multiplication.cu  nrm2.cu  permutate.cu  reduce.cu  scale.cu  subtraction.cu  sum.cu
src/cuda/blas_src/: axpy.cu  blas_utils.cu  dot.cu  ger.cu  max.cu  nrm2.cu  scale.cu  sum.cu
src/cuda/nn/: clamp.cu  clip_norm.cu  dropout.cu  exp.cu  nll_loss.cu  nll_loss_1d_encode.cu  nll_loss_1d_index.cu  nn_utils.cu  relu.cu  smax_2D_row.cu  smax_vec.cu
src/device/: caching_allocator.zig  capture.zig  cuda_device.zig  data_cache.zig  device_common.zig  device_reference.zig  dimension_map.zig  enabled_devices.zig  host_device.zig  opspec.zig  reduce.zig  (+1 more)
tensorboard/: build.zig  build.zig.zon
tests/: Earthfile  build.zig  build.zig.zon  embed_python.zig  python.zig
zigrad-site/: docusaurus.config.ts  flake.nix  package-lock.json  package.json
(+110 files in other folders)
